# interview-noryai

./: README.md
django/: .gitignore  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml
django/weird_salads/: apps.py  views.py
django/weird_salads/static/weird_salads/: style.css
django/weird_salads/templates/weird_salads/: base.html  index.html
django/weird_salads_site/: asgi.py  settings.py  settings_docker_compose.py  urls.py  wsgi.py
django/weird_salads_staff/: admin.py  apps.py  models.py  urls.py  views.py
django/weird_salads_staff/migrations/: 0001_initial.py  0002_auto_20250516_1725.py
django/weird_salads_staff/templates/weird_salads_staff/: list_staff.html
fastapi-vite-react/: README.md  compose.yaml
fastapi-vite-react/backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
fastapi-vite-react/backend/alembic/: env.py
fastapi-vite-react/backend/alembic/versions/: 50fc5d40310d_create_staff_table.py  698e3e3e0adf_create_stock_table.py  826078be338e_create_tables.py  d04827eec998_seed_db.py  d6f3e098e7a7_add_sample_stock_data.py  ea5005765bc6_add_sample_staff_data.py  ingredient_data.csv  location_data.csv  menu_data.csv  modifier_data.csv  recipe_data.csv  staff_data.csv  stock_data.csv
fastapi-vite-react/backend/weird_salads/: app.py  config.py  dependencies.py  models.py
fastapi-vite-react/frontend/: Dockerfile
rails/: Dockerfile  README.md  compose.yml
rails/config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb
rails/db/: db_bootstrap.sql  schema.rb
(+11 files in other folders)
