[project]
name = "weird-salads"
version = "0.1.0"
description = "Weird Salads example"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django~=5.2.1",
    "psycopg[binary,pool]~=3.2.8",
    "pyyaml~=6.0.2",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.2.0",
    "mypy>=1.15.0",
    "ruff>=0.11.9",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "weird_salads_site.settings"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
