[project]
name = "weird-salad"
version = "0.1.0"
description = "Weird Salads FastAPI starter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.12",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.10",
]
